--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         return (
         <>
         <div>
-        	{cnt}
+        	<h1>{cnt}</h1>
         </div>
         <button onClick={ () => handleClick(1) }>
         	Increment
